<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_seccion_1"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/seccion_1"/>
        <item
            android:id="@+id/menu_seccion_2"
            android:icon="@drawable/ic_supervisor_account_black_24dp"
            android:title="@string/seccion_2"/>
    </group>

    <item
        android:id="@+id/navigation_subheader"
        android:title="@string/otras_opciones">
        <menu>
            <item
                android:id="@+id/menu_opcion_1"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/opcion_1"/>
            <item
                android:id="@+id/menu_opcion_2"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/opcion_2"/>
            <item
                android:id="@+id/menu_opcion_3"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/opcion_3"/>
        </menu>
    </item>
</menu>